[metadata]
name = tuning
version = 0.1.0
author  = Idir DEHMOUS
author_email = idehmous@meteo.be 
description  = "Tuning tools " 
long_description = file: README.md, CHANGELOG.md, LICENSE.txt
keywords = Desroziers , covariance , corrlation , thinning distance , ODB , python 
license = Apache-Licence-2.0
classifiers = [
  "Development Status   :: 4 - Beta release",
  "Intended Audience    :: Developers ,researchers",
  "Topic                :: Software Development :: Build Tools , tuning and disgnostics  , database",
  "License              :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python C"      ,
  "Dependencies         :: pyodb_1.1.0"
  "Operating System     :: OS dependent"]

#dependencies=["zstandard"]

[build-system]
requires      = ["setuptools>=65.0.0"]
build-backend =  "setuptools.build_meta"

[options]
zip_safe = False
#include_package_data = True
package_dir==.
packages         = obstool
python_requires  = >=3.8

#[options.packages.find]
#where   =pyodb,pyodb/modules 
#include =include 
